--- a/snail-and-well.ipynb
+++ b/snail-and-well.ipynb
@@ -179,6 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "new_list=[]\n",
     "for i in displacements:\n",
     "  b= ((i - average)**2)/days\n",
     "  new_list.append(b)\n",
