--- a/robin-hood.ipynb
+++ b/robin-hood.ipynb
@@ -121,7 +121,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import sqrt\n",
+    "\n",
+    "for i in points:\n",
+    "  dist=sqrt((i[0]**2)+(i[1]**2))\n",
+    "  dist=[float(dist)]\n",
+    "  print(dist)\n",
+    "\n",
+    "The points closest to the center are (0,2) and (0,-2) with an equal distance of 2."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,7 +145,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Only the last two arrows have a distance of over 9 from the center : [12.727922061357855]and[12.041594578792296].\n"
+   ]
   }
  ],
  "metadata": {
