--- a/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors.ipynb
@@ -296,6 +296,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "from random import choice\n",
+    "\n",
+    "\n",
     "def how_many_rounds():\n",
     "  while True:\n",
     "    that_many = int(input(\"How many rounds would you like to play?\"))\n",
@@ -305,6 +309,131 @@
     "    else:\n",
     "      return(that_many)\n",
     "      break\n",
+    "\n",
+    "\n",
+    "cpu_score=0\n",
+    "player_score=0\n",
+    "\n",
+    "n_rounds = how_many_rounds()\n",
+    "\n",
+    "rounds_to_win = (n_rounds+1)/2\n",
+    "\n",
+    "gestures_2 = [\"rock\",\"paper\",\"scissors\",\"spock\",\"lizard\"]\n",
+    "\n",
+    "def compchoice_2():\n",
+    "  cpuchoice=random.choice(gestures_2)\n",
+    "  return(cpuchoice)\n",
+    "  \n",
+    "\n",
+    "def playerschoice_2():\n",
+    "  while True:\n",
+    "    playerchooses = input(\"Please type rock, paper, scissors, spock or lizard:\")\n",
+    "    if playerchooses not in gestures_2:\n",
+    "      print(\"Please choose between the 5 options and write in small letters\")\n",
+    "      continue\n",
+    "    else: \n",
+    "      return(playerchooses)\n",
+    "      break\n",
+    "  \n",
+    "def winround_2():\n",
+    "  while True:\n",
+    "    playerchooses = playerschoice_2()\n",
+    "    cpuchoice = compchoice_2()\n",
+    "    print(\"The player chooses \" + str(playerchooses))\n",
+    "    print(\"The computer chooses \" + str(cpuchoice))\n",
+    "\n",
+    "    if playerchooses == \"rock\":\n",
+    "      if cpuchoice == \"rock\":\n",
+    "        return(0)\n",
+    "      elif cpuchoice == \"paper\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"scissors\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"spock\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"lizard\":\n",
+    "        return(2)\n",
+    "\n",
+    "    elif playerchooses == \"paper\":\n",
+    "      if cpuchoice == \"rock\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"paper\":\n",
+    "        return(0)\n",
+    "      elif cpuchoice == \"scissors\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"spock\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"lizard\":\n",
+    "        return(1)\n",
+    "    \n",
+    "    elif playerchooses == \"scissors\":\n",
+    "      if cpuchoice == \"rock\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"paper\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"scissors\":\n",
+    "        return(0)\n",
+    "      elif cpuchoice == \"spock\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"lizard\":\n",
+    "        return(2)\n",
+    "\n",
+    "    elif playerchooses == \"spock\":\n",
+    "      if cpuchoice == \"rock\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"paper\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"scissors\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"spock\":\n",
+    "        return(0)\n",
+    "      elif cpuchoice == \"lizard\":\n",
+    "        return(1)\n",
+    "    \n",
+    "    elif playerchooses == \"lizard\":\n",
+    "      if cpuchoice == \"rock\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"paper\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"scissors\":\n",
+    "        return(1)\n",
+    "      elif cpuchoice == \"spock\":\n",
+    "        return(2)\n",
+    "      elif cpuchoice == \"lizard\":\n",
+    "        return(0)\n",
+    "\n",
+    "\n",
+    "def drum_roll():\n",
+    "  result = winround_2()\n",
+    "  if result==1:\n",
+    "    print(\"The computer wins\")\n",
+    "    return(\"The computer wins\")\n",
+    "  elif result == 2:\n",
+    "    print(\"The human wins\")\n",
+    "    return(\"The human wins\")\n",
+    "  elif result ==0:\n",
+    "    print(\"It's a tie\")\n",
+    "    return(\"It's a tie\")\n",
+    "\n",
+    "\n",
+    "for r in range(n_rounds):\n",
+    "  result_round = drum_roll()\n",
+    "  if str(result_round) == \"The computer wins\":\n",
+    "    cpu_score += 1\n",
+    "  elif str(result_round) == \"The human wins\":\n",
+    "    player_score += 1\n",
+    "  elif str(result_round) == \"It's a tie\":\n",
+    "    continue\n",
+    "  print(\"Computer: \"+ str(cpu_score)+\" Human : \"+str(player_score))\n",
+    "\n",
+    "  if cpu_score == rounds_to_win:\n",
+    "    print(\"The computer is the overall winner : \"+str(cpu_score)+\" rounds to \"+str(player_score))\n",
+    "    break\n",
+    "  elif player_score == rounds_to_win:\n",
+    "    print(\"The human is the overall winner : \"+str(player_score)+\" rounds to \"+str(cpu_score))\n",
+    "    break\n",
+    "  else:\n",
+    "    continue\n",
     "    \n"
    ]
   }
