--- a/robin-hood.ipynb
+++ b/robin-hood.ipynb
@@ -122,14 +122,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "distance = []\n",
     "from math import sqrt\n",
     "\n",
     "for i in points:\n",
     "  dist=sqrt((i[0]**2)+(i[1]**2))\n",
     "  dist=[float(dist)]\n",
-    "  print(dist)\n",
+    "  distance.append(dist)\n",
     "\n",
-    "The points closest to the center are (0,2) and (0,-2) with an equal distance of 2."
+    "mindistance=min(distance)\n",
+    "print(mindistance)\n",
+    "\n",
+    "new_dic=dict(zip(points, distance))\n",
+    "print(new_dic)\n",
+    "\n",
+    "minpoint=[]\n",
+    "\n",
+    "for key, value in new_dic.items():\n",
+    "  if value == mindistance:\n",
+    "    minpoint.append(key)\n",
+    "print(\"The closest points to the center are : \",str(minpoint))"
    ]
   },
   {
@@ -146,7 +158,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Only the last two arrows have a distance of over 9 from the center : [12.727922061357855]and[12.041594578792296].\n"
+    "count=[]\n",
+    "for i in points:\n",
+    "  if (i[0]**2)+(i[1]**2) > 81:\n",
+    "    count.append(i)\n",
+    "print(\"The number of arrows outside the circle is :\",str(len(count)))\n"
    ]
   }
  ],
