--- a/rock-paper-scissors.ipynb
+++ b/rock-paper-scissors.ipynb
@@ -145,10 +145,8 @@
     "    playerchooses = input(\"Please type rock, paper or scissors:\")\n",
     "    if playerchooses not in gestures:\n",
     "      print(\"Please choose between the 3 options and write in small letters\")\n",
-    "      continue\n",
     "    else: \n",
-    "      return(playerchooses)\n",
-    "      break"
+    "      return(playerchooses)"
    ]
   },
   {
@@ -166,7 +164,6 @@
    "outputs": [],
    "source": [
     "def winround():\n",
-    "  while True:\n",
     "    playerchooses = playerschoice()\n",
     "    cpuchoice = compchoice()\n",
     "    print(\"The player chooses \" + str(playerchooses))\n",
@@ -176,7 +173,7 @@
     "      if cpuchoice == \"rock\":\n",
     "        return(0)\n",
     "      elif cpuchoice == \"paper\":\n",
-    "        return(2)\n",
+    "        return(1)\n",
     "      elif cpuchoice == \"scissors\":\n",
     "        return(2)\n",
     "\n",
@@ -248,7 +245,8 @@
     "  elif str(result_round) == \"The human wins\":\n",
     "    player_score += 1\n",
     "  elif str(result_round) == \"It's a tie\":\n",
-    "    continue\n",
+    "    cpu_score += 1\n",
+    "    player_score += 1\n",
     "  print(\"Computer: \"+ str(cpu_score)+\" Human : \"+str(player_score))\n",
     "\n",
     "  if cpu_score == rounds_to_win:\n",
@@ -257,8 +255,9 @@
     "  elif player_score == rounds_to_win:\n",
     "    print(\"The human is the overall winner : \"+str(player_score)+\" rounds to \"+str(cpu_score))\n",
     "    break\n",
-    "  else:\n",
-    "    continue"
+    "  elif player_score == rounds_to_win and cpu_score==rounds_to_win:\n",
+    "    print(\"The game ends on a tie : \"+str(player_score)+\" to \"+str(cpu_score))\n",
+    "    break"
    ]
   },
   {
@@ -330,13 +329,11 @@
     "    playerchooses = input(\"Please type rock, paper, scissors, spock or lizard:\")\n",
     "    if playerchooses not in gestures_2:\n",
     "      print(\"Please choose between the 5 options and write in small letters\")\n",
-    "      continue\n",
     "    else: \n",
     "      return(playerchooses)\n",
-    "      break\n",
+    "      \n",
     "  \n",
     "def winround_2():\n",
-    "  while True:\n",
     "    playerchooses = playerschoice_2()\n",
     "    cpuchoice = compchoice_2()\n",
     "    print(\"The player chooses \" + str(playerchooses))\n",
@@ -346,7 +343,7 @@
     "      if cpuchoice == \"rock\":\n",
     "        return(0)\n",
     "      elif cpuchoice == \"paper\":\n",
-    "        return(2)\n",
+    "        return(1)\n",
     "      elif cpuchoice == \"scissors\":\n",
     "        return(2)\n",
     "      elif cpuchoice == \"spock\":\n",
@@ -423,7 +420,8 @@
     "  elif str(result_round) == \"The human wins\":\n",
     "    player_score += 1\n",
     "  elif str(result_round) == \"It's a tie\":\n",
-    "    continue\n",
+    "    cpu_score += 1\n",
+    "    player_score += 1\n",
     "  print(\"Computer: \"+ str(cpu_score)+\" Human : \"+str(player_score))\n",
     "\n",
     "  if cpu_score == rounds_to_win:\n",
@@ -432,8 +430,9 @@
     "  elif player_score == rounds_to_win:\n",
     "    print(\"The human is the overall winner : \"+str(player_score)+\" rounds to \"+str(cpu_score))\n",
     "    break\n",
-    "  else:\n",
-    "    continue\n",
+    "  elif player_score == rounds_to_win and cpu_score==rounds_to_win:\n",
+    "    print(\"The game ends on a tie : \"+str(player_score)+\" to \"+str(cpu_score))\n",
+    "    break\n",
     "    \n"
    ]
   }
