--- a/snail-and-well.ipynb
+++ b/snail-and-well.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "well_height= 125\n",
     "daily_distance= 30\n",
-    "nightly_distance= 20\n",
+    "nightly_distance= -20\n",
     "snail_position= 0"
    ]
   },
@@ -70,8 +70,12 @@
    "outputs": [],
    "source": [
     "while snail_position< well_height:\n",
-    "  snail_position += (daily_distance-nightly_distance)\n",
-    "  days+=1"
+    "  snail_position += daily_distance\n",
+    "  days += 1\n",
+    "  if snail_position > well_height:\n",
+    "    break\n",
+    "  else:\n",
+    "    snail_position += nightly_distance"
    ]
   },
   {
@@ -87,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(days)"
+    "print(\"The snail escapes in \",days,\" days\")"
    ]
   },
   {
@@ -113,12 +117,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "well_height= 125\n",
+    "nightly_distance= -20\n",
+    "snail_position= 0\n",
+    "\n",
+    "\n",
+    "days = 0\n",
+    "\n",
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "\n",
+    "\n",
     "for i in advance_cm:\n",
-    "  if snail_position<well_height:\n",
-    "    snail_position += (i-nightly_distance)\n",
+    "  if snail_position<=well_height:\n",
+    "    snail_position += i\n",
     "    days +=1\n",
+    "    if snail_position > well_height:\n",
+    "      break\n",
+    "    else:\n",
+    "      snail_position += nightly_distance\n",
     "\n",
     "print(days)"
    ]
@@ -140,7 +156,7 @@
     "displacements = []\n",
     "\n",
     "for i in advance_cm:\n",
-    "  i -= nightly_distance\n",
+    "  i += nightly_distance\n",
     "  displacements.append(i)\n",
     "\n",
     "\n",
