--- a/temperature.ipynb
+++ b/temperature.ipynb
@@ -223,7 +223,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "test=[]\n",
+    "for i in temperatures_C:\n",
+    "  if i > 70:\n",
+    "    test.append(i)\n",
+    "  else:\n",
+    "    test.append(None)\n",
+    "\n",
+    "new_dic=dict(zip(temperatures_C, test))\n",
+    "print(new_dic)\n",
+    "\n",
+    "values=new_dic.values()\n",
+    "print(values)\n",
+    "\n",
+    "for i in values:\n",
+    "  if i != None and i+1!= None:\n",
+    "    consecutive += 1\n",
+    "  else:\n",
+    "    consecutive = 0\n",
+    "\n",
+    "  if consecutive > 4:\n",
+    "    print(\"The list has more than 4 consecutive hours.\")\n",
+    "    break"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +261,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if consecutive > 4 or max(temperatures_C) > 80 or avg_temp > 65:\n",
+    "  print(\"The system needs to be replaced\")\n",
+    "else:\n",
+    "  print(\"The system is fine.\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
